--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nullstack": "~0.16.0"
+    "nullstack": "~0.16.0",
+    "tailwindcss": "^3.0.0",
+    "postcss-loader": "^7.0.1"
   },
   "scripts": {
     "start": "npx nullstack start",
