--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "ISC",
   "devDependencies": {
     "nullstack": "~0.16.0",
-    "tailwindcss": "^3.0.0",
-    "postcss-loader": "^7.0.1"
+    "postcss-loader": "^7.0.1",
+    "tailwindcss": "^3.0.0"
   },
   "scripts": {
     "start": "npx nullstack start",
     "build": "npx nullstack build"
+  },
+  "dependencies": {
+    "mongodb": "^4.11.0"
   }
 }
