--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "hardhat": "^2.12.2",
     "nullstack": "~0.16.0",
     "postcss-loader": "^7.0.1",
     "tailwindcss": "^3.0.0"
@@ -14,6 +16,8 @@
     "build": "npx nullstack build"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.0",
+    "ethers": "^5.7.2",
     "mongodb": "^4.11.0"
   }
 }
