--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
     "ethers": "^5.7.2",
-    "mongodb": "^4.11.0"
+    "mongodb": "^4.11.0",
+    "tailwind-merge": "^1.8.0"
   }
 }
